Table provinces {
  id int [pk, increment]
  name varchar [not null, unique]
}

Table cities {
  id int [pk, increment]
  name varchar [not null]
  province_id int [not null, ref: > provinces.id]
}

Table sub_districts {
  id int [pk, increment]
  name varchar [not null]
  city_id int [not null, ref: > cities.id]
}

Enum school_type {
  RA
  MIN
  MIS
  MTSN
  MTSS
  MAN
  MAS
  MAKN
  MAKS
}

Table schools {
  nsm varchar [pk, not null, unique] // Nomor Statistik Madrasah/Sekolah
  name varchar [not null]
  sub_district_id varchar [not null, ref: > sub_districts.id]
  address text
  school_type school_type [not null]
}

// open on dbdiagram.io